--- a/GoShopping/zh-Hans.lproj/Main.strings
+++ b/GoShopping/zh-Hans.lproj/Main.strings
@@ -24,13 +24,13 @@
 "haM-3a-TLZ.title" = "选择要买的";
 
 /* Class = "UINavigationItem"; title = "Delayed items"; ObjectID = "hdY-1C-ygw"; */
-"hdY-1C-ygw.title" = "推迟的";
+"hdY-1C-ygw.title" = "暂时推迟的";
 
 /* Class = "UISegmentedControl"; imV-tb-Vaw.segmentTitles[0] = "Food/Drink"; ObjectID = "imV-tb-Vaw"; */
 "imV-tb-Vaw.segmentTitles[0]" = "食物/饮料";
 
 /* Class = "UISegmentedControl"; imV-tb-Vaw.segmentTitles[1] = "Essentials"; ObjectID = "imV-tb-Vaw"; */
-"imV-tb-Vaw.segmentTitles[1]" = "生活必须";
+"imV-tb-Vaw.segmentTitles[1]" = "生活必需";
 
 /* Class = "UISegmentedControl"; imV-tb-Vaw.segmentTitles[2] = "Health"; ObjectID = "imV-tb-Vaw"; */
 "imV-tb-Vaw.segmentTitles[2]" = "健康护理";
