--- a/GoShopping/en.lproj/Main.strings
+++ b/GoShopping/en.lproj/Main.strings
@@ -6,7 +6,7 @@
 "6gJ-0t-lls.normalTitle" = "Save";
 
 /* Class = "UITabBarItem"; title = "To Buys"; ObjectID = "Ezc-o8-sKh"; */
-"Ezc-o8-sKh.title" = "To Buys";
+"Ezc-o8-sKh.title" = "To buys";
 
 /* Class = "UITabBarItem"; title = "Delayed"; ObjectID = "FnY-K4-NVt"; */
 "FnY-K4-NVt.title" = "Delayed";
