empty state for collection view

--- a/GoShopping/zh-Hans.lproj/Localizable.strings
+++ b/GoShopping/zh-Hans.lproj/Localizable.strings
@@ -25,3 +25,4 @@
 "action.deleteFromToBuyList.title"="删除条目";
 
 "to.buy.empty.hint.message" = "请选择要买的商品";
+"delayed.empty.hint.message" = "暂无推迟的条目";
