share with image snapshots

--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 "to.buy.empty.hint.message" = "Please pick up some items";
 "delayed.empty.hint.message" = "Nothing here yet, which is good";
+
+"message.hint.add.new"="Click to add";
