--- a/GoShopping/zh-Hans.lproj/Localizable.strings
+++ b/GoShopping/zh-Hans.lproj/Localizable.strings
@@ -28,3 +28,14 @@
 "delayed.empty.hint.message" = "暂无推迟的条目";
 
 "message.hint.add.new"="点击添加";
+
+"message.hint.merge.shared.title"="你有未完成的条目";
+"message.hint.merge.shared.subtitle"="待买条目将会被合并，已有条目会被忽略，继续吗？";
+
+"message.hint.merge.shared.ok"="没问题";
+"message.hint.merge.shared.cancel"="取消";
+
+"dialog.image.picker.title"="选择图片";
+"dialog.image.picker.photo"="手机相册";
+"dialog.image.picker.carema"="手机摄像头";
+"dialog.image.picker.cancel"="取消";
