adjust dropdown styles

--- a/GoShopping/en.lproj/Main.strings
+++ b/GoShopping/en.lproj/Main.strings
@@ -21,7 +21,7 @@
 "ayE-Dw-5Ma.headerTitle" = "Basic information";
 
 /* Class = "UINavigationItem"; title = "Select items here"; ObjectID = "haM-3a-TLZ"; */
-"haM-3a-TLZ.title" = "Select";
+"haM-3a-TLZ.title" = "Choose";
 
 /* Class = "UINavigationItem"; title = "Delayed items"; ObjectID = "hdY-1C-ygw"; */
 "hdY-1C-ygw.title" = "Delayed";
