--- a/GoShopping/zh-Hans.lproj/Localizable.strings
+++ b/GoShopping/zh-Hans.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "action.complete.title" = "完成";
 "action.delay.title" = "推迟";
 "action.priority.title" = "标记为重要";
+"action.downgrade.title" = "取消重要标记";
 "action.delete.title" = "删除";
 
 "category.food.title" = "食物/饮料";
@@ -47,3 +48,6 @@
 "tag.table.header.message"="标签列表";
 
 "history.empty.hint.message"="去买点东西吧";
+
+"message.hint.clean.history.ok"="确定";
+"message.hint.clean.history.cancel"="取消";
