fixed a few defects

--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -53,3 +53,5 @@
 
 "message.hint.clean.history.ok"="OK";
 "message.hint.clean.history.cancel"="Cancel";
+
+"share.message.title"="Share your to buy items with your friend";
