customise share action view

--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -55,3 +55,5 @@
 "message.hint.clean.history.cancel"="Cancel";
 
 "share.message.title"="Share your to buy items with your friend";
+
+"share.extension.message.title"="Save into To Buy";
