--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -57,3 +57,5 @@
 "share.message.title"="Share your to buy items with your friend";
 
 "share.extension.message.title"="Save into To Buy";
+
+"tobuy.nav.title"="To Buy";
