first element as ADD NEW for can buy view

--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "action.downgrade.title" = "Unmark as important";
 "action.delete.title" = "Delete";
 
+"category.system.title" = "Add new";
 "category.food.title" = "Food/Drink";
 "category.essentials.title" = "Essentials";
 "category.health.title" = "Health";
