--- a/GoShopping/en.lproj/Localizable.strings
+++ b/GoShopping/en.lproj/Localizable.strings
@@ -46,7 +46,7 @@
 "dialog.image.picker.carema"="Carema";
 "dialog.image.picker.cancel"="Cancel";
 
-"tag.empty.hint.message"="You can some tags for your to buy items";
+"tag.empty.hint.message"="You can add some tags for your to buy items";
 
 "tag.table.header.message"="Define tags for items";
 
